2006-01-30  Francois Dumont  <dums@stlport...>

	* Patch from Ulrich Eckhardt for EVC4 ICE + some documentation
	updates and fixes.

2006-01-24  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* test/unit/bind_test.cpp: add test for member function
	binding that show workaround for const function call.

	* build/lib/configure: add --with-boost option from STLport 5.1

	* src/cxa.c: __cxa_finalize and __cxa_atexit present in libc
	in FreeBSD 5.3, but again absent in 6.0

2006-01-18  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* build/Makefiles/gmake/app/gcc.mak,
	build/Makefiles/gmake/lib/gcc.mak: detect whether gcc
	was builded with --disable-shared and use correct libgcc.

	* build/lib/configure: add --use-static-gcc option

2006-01-17  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* src/c_locale_glibc/c_locale_glibc2.c: really implemented
	getting default locale categories from environment; replace
	a few strcpy by strncpy to protect from possible buffer overflow
	attack.
	
	* Repository: bump library version to 5.0.2 in branch STLPORT_5_0

	* stlport/new.h, stlport/typeinfo: few workarounds for ICC 9
	[suggested by Lim Hwan Cheol].

2006-01-13  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* stlport/stl/_string.h, stlport/stl/debug/_string.h:
	const operator [n] should return CharT() in case of
	n == size(), ISO/IEC 14882:2003(E), 21.3.4; thanks Russ Miller.

	* test/unit/string_test.cpp: test for fixed bug above.

2006-01-12  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* stlport/stl/_rope.h, stlport/stl/_rope.c: pass CharConsumer
	via reference, to take into account CharConsumer modifications.
	This has relation to find(char) in rope. Thanks Cristian Vlasceanu.

	* test/unit/rope_test.cpp: test for fixed bug above.

2005-12-26  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* Repository: STLport 5.0.1, tag STLPORT_5_0_1

2005-12-24  Petr Ovtchenkov  <complement@users.sourceforge.net>
